--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1588,6 +1588,85 @@ pre {
   .table-responsive > .table-bordered {
     border: 0; }
 
+.form-control1 {
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+  -o-transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out; }
+  @media (prefers-reduced-motion: reduce) {
+    .form-control1 {
+      -webkit-transition: none;
+      -o-transition: none;
+      transition: none; } }
+    .form-control1::-ms-expand {
+      background-color: transparent;
+      border: 0; }
+    .form-control1:focus {
+      color: #495057;
+      background-color: #fff;
+      border-color: #80bdff;
+      outline: 0;
+      -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+      box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+    .form-control1::-webkit-input-placeholder {
+      color: #6c757d;
+      opacity: 1; }
+    .form-control1:-ms-input-placeholder {
+      color: #6c757d;
+      opacity: 1; }
+    .form-control1::-ms-input-placeholder {
+      color: #6c757d;
+      opacity: 1; }
+    .form-control1::placeholder {
+      color: #6c757d;
+      opacity: 1; }
+    .form-control1:disabled, .form-control1[readonly] {
+      background-color: #e9ecef;
+      opacity: 1; }
+
+    .field-icon {
+      position: absolute;
+      top: 50%;
+      right: 15px;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+      color: rgba(0, 0, 0, 0.3); }
+        
+.form-control-placeholder1 {
+  position: absolute;
+  top: 2px;
+  padding: 7px 0 0 15px;
+  -webkit-transition: all 400ms;
+  -o-transition: all 400ms;
+  transition: all 400ms;
+  opacity: .6; }
+        
+.form-control1:focus + .form-control-placeholder1,
+.form-control1:valid + .form-control-placeholder1 {
+  -webkit-transform: translate3d(0, -120%, 0);
+  transform: translate3d(0, -120%, 0);
+  padding: 7px 0 0 0;
+  opacity: 1;
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 1px;
+  color: #01d28e;
+  font-weight: 700; }
+
 .form-control {
   display: block;
   width: 100%;
@@ -8243,13 +8322,23 @@ h1, h2, h3, h4, h5,
   color: rgba(0, 0, 0, 0.3); }
 
 .form-control-placeholder {
-  position: absolute;
+  position: left;
   top: 2px;
   padding: 7px 0 0 15px;
   -webkit-transition: all 400ms;
   -o-transition: all 400ms;
   transition: all 400ms;
   opacity: .6; }
+
+.form-errors {
+  position: left;
+  top: 2px;
+  padding: 7px 0 0 15px;
+  -webkit-transition: all 400ms;
+  -o-transition: all 400ms;
+  transition: all 400ms;
+  opacity: .6;
+  color: crimson; }
 
 .form-control:focus + .form-control-placeholder,
 .form-control:valid + .form-control-placeholder {
