--- a/src/main/resources/templates/register_approve.html
+++ b/src/main/resources/templates/register_approve.html
@@ -27,27 +27,12 @@
 						<div class="login-wrap p-4 p-md-5">
 			      	<div class="d-flex">
 			      		<div class="w-100">
-			      			<h3 class="mb-4">Sign In</h3>
+			      			<h3 class="mb-4">Registration completed successfully.</h3>
 			      		</div>
 			      	</div>
-							<form action="#" class="signin-form">
-			      				<div class="form-group mt-3">
-			      					<input type="text" class="form-control1">
-			      					<label class="form-control-placeholder1">Username</label>
-									<br>
-			      				</div>
-		            			<div class="form-group">
-		              				<input id="password-field" type="password" class="form-control1">
-		              				<label class="form-control-placeholder1">Password</label>
-		              				<span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
-		            			</div>
-		            			<div class="form-group">
-		            				<button type="submit" class="form-control btn btn-primary rounded submit px-3">Sign In</button>
-		            			</div>
-		          			</form>
-							<form method="get" action = "/redirectToSignUpPage">
+							<form method="get" action = "/redirectToHomePage">
 								<div class="form-group">
-									<p class="text-center">Not a member?<br><input type="submit" class="form-control btn btn-primary rounded submit px-3" value="Sign up"></p>
+									<input type="submit" class="form-control btn btn-primary rounded submit px-3" value="Login">
 								</div>
 							</form>
 		        </div>
@@ -56,11 +41,6 @@
 			</div>
 		</div>
 	</section>
-
-	<script src="js/jquery.min.js"></script>
-  <script src="js/popper.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/main.js"></script>
 
 	</body>
 </html>
