--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8278,6 +8278,9 @@ h1, h2, h3, h4, h5,
   .login-wrap h3 {
     font-weight: 300; }
 
+.duplicatedTableName {
+  color: #ff0000;}
+
 .form-group {
   position: relative;
   z-index: 0;
