Added Link Controller and Service, added new Link Tables views

--- a/src/main/resources/templates/blank_tablename.html
+++ b/src/main/resources/templates/blank_tablename.html
@@ -111,7 +111,7 @@
                         </div>
                     </form>
                 </div>
-                <p class="u-large-text u-text u-text-custom-color-2 u-text-variant u-text-4">Table name already exists, please use another one</p>
+                <p class="u-large-text u-text u-text-custom-color-2 u-text-variant u-text-4">Empty table name field, please fill in</p>
             </div>
         </div>
     </div>
