--- a/src/main/resources/templates/blank_linkid.html
+++ b/src/main/resources/templates/blank_linkid.html
@@ -62,7 +62,7 @@
         <h2 class="u-text u-text-default u-text-1"> Link Binder</h2>
         <div class="u-align-center u-container-style u-group u-radius-20 u-shape-round u-white u-group-1">
           <div class="u-container-layout u-container-layout-1">
-            <h2 class="u-text u-text-body-color u-text-default u-text-2"> Link tables </h2>
+            <h2 class="u-text u-text-body-color u-text-default u-text-2" th:text="${tablename}"/>
             <div class="u-table u-table-responsive u-table-1">
                 <table border = "1" class="u-table-entity">
                     <colgroup>
@@ -73,32 +73,30 @@
                     </colgroup>
                     <thead class="u-palette-2-light-2 u-table-header u-table-header-1">
                     <tr style="height: 45px;">
-                        <th class="u-border-1 u-border-black u-table-cell">Name</th>
+                        <th class="u-border-1 u-border-black u-table-cell">Id</th>
                         <th class="u-border-1 u-border-black u-table-cell">Description</th>
-                        <th class="u-border-1 u-border-black u-table-cell">Open Table</th>
-                        <th class="u-border-1 u-border-black u-table-cell">Delete Table</th>
+                        <th class="u-border-1 u-border-black u-table-cell">Shortened link</th>
+                        <th class="u-border-1 u-border-black u-table-cell">Delete link</th>
                     </tr>
                     </thead>
                     <tbody class="u-table-alt-grey-5 u-table-body">
-                    <tr style="height: 75px;" th:each="tempUserTables:${usertables}">
-                        <td class="u-border-1 u-border-grey-30 u-first-column u-grey-50 u-table-cell u-table-cell-5" th:text="${tempUserTables.tablename}"/>
-                        <td class="u-border-1 u-border-grey-30 u-table-cell" th:text="${tempUserTables.description}"/>
+                    <tr style="height: 75px;" th:each="tempLinkList:${linklist}">
+                        <td class="u-border-1 u-border-grey-30 u-first-column u-grey-50 u-table-cell u-table-cell-5" th:text="${tempLinkList.id}"/>
+                        <td class="u-border-1 u-border-grey-30 u-table-cell" th:text="${tempLinkList.description}"/>
+                        <td class="u-border-1 u-border-grey-30 u-table-cell" th:text="${tempLinkList.shortenedUrl}"/>
                         <td class="u-border-1 u-border-grey-30 u-table-cell">
-                            <a th:href="@{/openTable(currentTable=${tempUserTables.tablename}, loggedUsername=${user.username})}">open</a>
-                        </td>
-                        <td class="u-border-1 u-border-grey-30 u-table-cell">
-                            <a th:href="@{/deleteTable(currentTable=${tempUserTables.tablename}, loggedUsername=${user.username})}">delete</a>
+                            <a th:href="@{/deleteLink(currentLink=${tempLinkList.id}, loggedUsername=${user.username})}">delete</a>
                         </td>
                     </tr>
                     </tbody>
                 </table>
             </div>
-              <h2 class="u-text u-text-body-color u-text-default u-text-3">Create new table</h2>
+              <h2 class="u-text u-text-body-color u-text-default u-text-3">Add new link</h2>
               <div class="u-form u-form-1">
-                  <form action="#" th:action="@{/createTable}" th:object="${table}" class="u-clearfix u-form-spacing-15 u-inner-form" style="padding: 15px">
+                  <form action="#" th:action="@{/addLink}" th:object="${link}" class="u-clearfix u-form-spacing-15 u-inner-form" style="padding: 15px">
                       <div class="u-form-group u-form-name">
-                          <label class="u-label">Table name</label>
-                          <input class="u-border-1 u-border-grey-30 u-input u-input-rectangle" type="text" th:field="*{tablename}">
+                          <label class="u-label">Id</label>
+                          <input class="u-border-1 u-border-grey-30 u-input u-input-rectangle" type="text" th:field="*{id}">
                       </div>
                       <br>
                       <div class="u-form-group u-form-name">
@@ -106,11 +104,22 @@
                           <input class="u-border-1 u-border-grey-30 u-input u-input-rectangle" type="text" th:field="*{description}">
                       </div>
                       <br>
+                      <div class="u-form-group u-form-name">
+                          <label class="u-label">Target URL &nbsp</label>
+                          <input class="u-border-1 u-border-grey-30 u-input u-input-rectangle" type="text" th:field="*{targetUrl}">
+                      </div>
+                      <br>
                       <div class="u-form-group u-form-submit">
-                          <button type="submit" th:name="loggedUsername" th:value="${user.username}">Create table</button>
+                          <button type="submit" th:name="tablename" th:value="${tablename}">Add Link</button>
+                      </div>
+                  </form>
+                  <form action = "/backToLinkTables" class="u-clearfix u-form-spacing-15 u-inner-form" style="padding: 15px">
+                      <div class="u-form-group u-form-submit u-label-none">
+                          <button type="submit" th:name="tablename" th:value="${tablename}">Back to link tables</button>
                       </div>
                   </form>
               </div>
+              <p class="u-large-text u-text u-text-custom-color-2 u-text-variant u-text-4">Empty link id field, please fill in</p>
           </div>
         </div>
       </div>
