--- a/src/main/resources/templates/logged_user.html
+++ b/src/main/resources/templates/logged_user.html
@@ -93,7 +93,9 @@
                     </tbody>
                 </table>
             </div>
-              <h2 class="u-text u-text-body-color u-text-default u-text-3">Create new table</h2>
+              <div class="parent1">
+                  <h2 class="u-text u-text-body-color u-text-default u-text-3">Create new table</h2>
+              </div>
               <div class="u-form u-form-1">
                   <form action="#" th:action="@{/createTable}" th:object="${table}" class="u-clearfix u-form-spacing-15 u-inner-form" style="padding: 15px">
                       <div class="u-form-group u-form-name">
