--- a/src/main/resources/templates/search_result.html
+++ b/src/main/resources/templates/search_result.html
@@ -76,7 +76,7 @@
                       </form>
                   </div>
               <div class="parent1">
-                  <h2 class="u-text u-text-body-color u-text-default u-text-3" th:text="'Table: ' + ${tablename}"/>
+                  <h2 class="u-text u-text-body-color u-text-default u-text-3" th:text="'Search result for id: &quot' + ${keyWord.keyWord} + '&quot in table: ' + ${tablename}"/>
               </div>
             <div class="u-table u-table-responsive u-table-1">
                 <table border = "1" class="u-table-entity">
@@ -108,28 +108,10 @@
                     </tbody>
                 </table>
             </div>
-              <div class="parent1">
-                  <h2 class="u-text u-text-body-color u-text-default u-text-3">Add new link</h2>
-              </div>
               <div class="u-form u-form-1">
-                  <form action="#" th:action="@{/addLink}" th:object="${link}" class="u-clearfix u-form-spacing-15 u-inner-form" style="padding: 15px">
-                      <div class="u-form-group u-form-name">
-                          <label class="u-label">Id</label>
-                          <input class="u-border-1 u-border-grey-30 u-input u-input-rectangle" type="text" th:field="*{id}">
-                      </div>
-                      <br>
-                      <div class="u-form-group u-form-name">
-                          <label class="u-label">Description &nbsp</label>
-                          <input class="u-border-1 u-border-grey-30 u-input u-input-rectangle" type="text" th:field="*{description}">
-                      </div>
-                      <br>
-                      <div class="u-form-group u-form-name">
-                          <label class="u-label">Target URL &nbsp</label>
-                          <input class="u-border-1 u-border-grey-30 u-input u-input-rectangle" type="text" th:field="*{targetUrl}">
-                      </div>
-                      <br>
-                      <div class="u-form-group u-form-submit">
-                          <button type="submit" th:name="tablename" th:value="${tablename}">Add Link</button>
+                  <form action = "/backToOpenedTable" class="u-clearfix u-form-spacing-15 u-inner-form" style="padding: 15px">
+                      <div class="u-form-group u-form-submit u-label-none">
+                          <button type="submit" th:name="tablename" th:value="${tablename}" th:text="'Back to: ' + ${tablename}"></button>
                       </div>
                   </form>
                   <form action = "/backToLinkTables" class="u-clearfix u-form-spacing-15 u-inner-form" style="padding: 15px">
