--- a/src/main/resources/templates/duplicated_linkid.html
+++ b/src/main/resources/templates/duplicated_linkid.html
@@ -120,12 +120,12 @@
                         <br>
                         <div class="u-form-group u-form-name">
                             <label class="u-label">Description &nbsp</label>
-                            <input class="u-border-1 u-border-grey-30 u-input u-input-rectangle" type="text" th:field="*{description}">
+                            <input class="u-border-1 u-border-grey-30 u-input u-input-rectangle" type="text" th:field="*{description}" th:value="${link.description}">
                         </div>
                         <br>
                         <div class="u-form-group u-form-name">
                             <label class="u-label">Target URL &nbsp</label>
-                            <input class="u-border-1 u-border-grey-30 u-input u-input-rectangle" type="text" th:field="*{targetUrl}">
+                            <input class="u-border-1 u-border-grey-30 u-input u-input-rectangle" type="text" th:field="*{targetUrl}" th:value="${link.targetUrl}">
                         </div>
                         <br>
                         <div class="u-form-group u-form-submit">
