--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,9 +37,8 @@
 									<br>
 			      				</div>
 		            			<div class="form-group">
-		              				<input type="password" th:field="*{password}" class="form-control1">
+		              				<input id="password-field" type="password" th:field="*{password}" class="form-control1">
 		              				<label class="form-control-placeholder1">Password</label>
-		              				<span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
 		            			</div>
 		            			<div class="form-group">
 		            				<button type="submit" class="form-control btn btn-primary rounded submit px-3">Sign In</button>
