--- a/src/main/resources/templates/search_result.html
+++ b/src/main/resources/templates/search_result.html
@@ -38,7 +38,7 @@
                 <li class="u-nav-item">
                     <form class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" method="get" action = "/redirectToHomePage">
                         <div>
-                            <input type="submit" value="Home page">
+                            <input type="submit" value="log out">
                         </div>
                     </form>
                 </li>
@@ -55,7 +55,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <p class="u-small-text u-text u-text-variant u-text-1" th:text="'logged as: ' + ${user.username}">
+      <p align="right" class="u-small-text u-text u-text-variant u-text-bb" th:text="'logged as: ' + ${user.username}"></p>
       </div></header>
     <section class="u-align-center u-clearfix u-custom-color-1 u-section-1" id="carousel_6616">
       <div class="u-clearfix u-sheet u-sheet-1">
